@@ -111,6 +111,7 @@ void Game_clock::set_time_palette
 			transition = 0;
 			}
 		gwin->get_pal()->set(PALETTE_INVISIBLE);
+		gwin->get_pal()->apply(true);
 		return;
 		}
 
@@ -122,6 +123,7 @@ void Game_clock::set_time_palette
 			transition = 0;
 			}
 		gwin->get_pal()->set(PALETTE_DAY);
+		gwin->get_pal()->apply(true);
 		return;
 		}
 
@@ -150,6 +152,7 @@ void Game_clock::set_time_palette
 			transition = 0;
 			}
 		gwin->get_pal()->set(old_palette);
+		gwin->get_pal()->apply(true);
 		return;
 		}
 
@@ -177,6 +180,7 @@ void Game_clock::set_time_palette
 			transition = 0;
 			}
 		gwin->get_pal()->set(new_palette);
+		gwin->get_pal()->apply(true);
 		return;
 		}
 	if (transition)
@@ -195,6 +199,7 @@ void Game_clock::set_time_palette
 		}
 
 	gwin->get_pal()->set(new_palette);
+	gwin->get_pal()->apply(true);
 	}
 
 /*
